feat(core): add first PNG codec