@@ -14,11 +14,94 @@ dependencies {
     testRuntimeOnly "org.lwjgl:lwjgl:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
     testRuntimeOnly "org.lwjgl:lwjgl-jemalloc:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
     testRuntimeOnly "org.lwjgl:lwjgl-stb:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
+    testImplementation "org.lwjgl:lwjgl-spng:${lwjgl_version}"
+    testRuntimeOnly "org.lwjgl:lwjgl-spng:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
+}
+
+sourceSets {
+    vector {
+        java.srcDirs = ['src/vector/java']
+    }
+    main {
+        compileClasspath += sourceSets.vector.output
+        runtimeClasspath += sourceSets.vector.output
+    }
+    test {
+        compileClasspath += sourceSets.vector.output
+        runtimeClasspath += sourceSets.vector.output
+    }
 }
 
 test {
     failOnNoDiscoveredTests = false
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+            '--add-modules', 'jdk.incubator.vector',
+            '--add-reads', 'icyllis.arc3d.core=ALL-UNNAMED',
+            '--add-reads', 'icyllis.arc3d.core.test=ALL-UNNAMED',
+    ]
+}
+
+tasks.named('compileVectorJava', JavaCompile) {
+    it.options.release.set(null)
+    sourceCompatibility = '17'
+    targetCompatibility = '17'
+}
+
+tasks.named('compileJava') {
+    dependsOn 'compileVectorJava'
+    options.compilerArgs += [
+            '--patch-module', "icyllis.arc3d.core=${sourceSets.vector.output.classesDirs.asPath}"
+    ]
+}
+
+tasks.named('jar') {
+    from sourceSets.vector.output
+}
+
+/*def nativesDir = layout.buildDirectory.dir("natives").get().asFile
+
+tasks.register('extractNatives') {
+    doLast {
+        nativesDir.mkdirs()
+        configurations.testRuntimeClasspath
+                .filter { it.name.contains('natives-windows') }
+                .each { jar ->
+                    copy {
+                        from zipTree(jar)
+                        into nativesDir
+                    }
+                }
+    }
+}
+
+tasks.register('runTestPNGDecode', JavaExec) {
+    group = 'application'
+    dependsOn 'extractNatives'
+    mainClass = 'icyllis.arc3d.core.test.TestPNGDecode'
+    classpath = sourceSets.test.runtimeClasspath
+
+    jvmArgs '--add-exports', 'java.base/jdk.internal.misc=org.lwjgl'
+    jvmArgs '--add-exports', 'java.base/jdk.internal.misc=icyllis.arc3d.core.test'
+
+    doFirst {
+        jvmArgs = [
+                //'--add-modules', 'jdk.incubator.vector',
+                '--add-exports', 'java.base/jdk.internal.misc=org.lwjgl',
+                '--add-exports', 'java.base/jdk.internal.misc=icyllis.arc3d.core.test',
+                '--add-reads', 'icyllis.arc3d.core.test=ALL-UNNAMED',
+                '--patch-module', "icyllis.arc3d.core.test=${sourceSets.test.output.classesDirs.asPath}",
+                '--module-path', classpath.asPath,
+                '--module', 'icyllis.arc3d.core.test/icyllis.arc3d.core.test.TestPNGDecode',
+                '-Dorg.lwjgl.util.Debug=true',
+                "-Dorg.lwjgl.librarypath=${nativesDir.absolutePath}",
+        ]
+        println "jvmArgs: ${jvmArgs}"
+        classpath = files()
+    }
+}*/
 
 publishing {
     def lwjglVersion = getProperty('lwjgl_version')
